# chat_everywhere

./: .gitignore  RELEASING  mk_packages
clients/: TESTS
clients/java-applet/contrib/: README  chat.cgi  chat.html  chat.php
clients/java-applet/doc/: CHANGES  COMPATIBILITY  INSTALL  PARAMETERS  THANKS
clients/java-applet/maintainer/: do_cab.bat  mk_win_tree  mkrel
clients/java-applet/src/: Chat.java  ChatComThread.java  ChatPrivate.java  Makefile
clients/java-applet/src/org/chateverywhere/: InputDialog.java  InputStack.java  MD5.java
clients/java-applet/src/org/chateverywhere/resources/: Messages_cs.java.native  Messages_da.java.native  Messages_de.java.native  Messages_en.java  Messages_en_US.java  Messages_es.java.native  Messages_fr.java.native  Messages_pl.java.native
clients/linux-gtk/: Makefile  commands.c  commands.h  config.h  fd_utils.c  fd_utils.h  io_comm.c  io_comm.h  nc_chat.c  nc_chat.h  screen_utils.c  screen_utils.h  sock_utils.c  sock_utils.h  str_utils.c  str_utils.h  user_input.c  user_input.h
clients/swing-applet/contrib/: chat-swing.cgi  chat-swing.html  chat-swing.php
clients/swing-applet/doc/: CHANGES  COMPATIBILITY  INSTALL  TRANSLATORS
clients/swing-applet/maintainer/: README  mkrel
clients/swing-applet/sample/: chat-swing-signed.html  chat-swing.color.html  chat-swing.html
clients/swing-applet/src/: Chat.java  ChatComThread.java  ChatPrivate.java  Makefile
clients/swing-applet/src/org/chateverywhere/: ChatMessage.java  JChatPane.java  JChatPaneScroller.java  MD5.java  MyTextField.java  SimpleLabelCellRenderer.java
clients/swing-applet/src/org/chateverywhere/resources/: Makefile  Messages.java  Messages_da_DK.java.native  Messages_en_GB.java  Messages_fr_FR.java.native  Messages_ru.java.native  Messages_ru_RU.java.native
server/: Makefile.in  aclocal.m4  configure  configure.in  mkrel
server/contrib/: chat_server
server/doc/: BUGS  CHANGES  FAQ  INSTALL  MANUAL  README  THANKS  TODO  TRANSLATORS  chat_protocol  chat_server.8
server/intl/: Makefile.in
server/po/: ChangeLog  POTFILES.in  chat_server.pot  cs.gmo  cs.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  pl.gmo  pl.po
server/src/: Makefile.in  RELEASE  auto_commands.c  auto_commands.h  chat.conf  chat.motd  chat.passwords  chat_server.c  chat_server.h  command_action.c  command_auth.c  command_ban.c  command_capabilities.c  command_gag.c  command_gag.h  command_help.c  command_ignore.c  command_kick.c  command_login.c  command_msg.c  command_op.c  command_quit.c  command_seen.c  command_setlevel.c  command_stats.c  command_talk.c  command_unban.c  command_unignore.c  command_users.c  command_usersinfo.c  commands.c  commands.h  communication.c  communication.h  config.h.in  config_file.c  config_file.h  fd_utils.c  fd_utils.h  getopt.c  (+28 more)
